<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    tools:context="com.doctor.eprescription.features.homescreen.allergies.details.AllergiesDetailFragment">

    <include
        android:id="@+id/compBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        layout="@layout/comp_back_button" />


    <TextView
        android:id="@+id/tvTitle"
        style="@style/BoldFontStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_19sdp"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_26ssp"
        android:text="@string/pharmacy_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compBackButton"
        tools:text="Title" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPharmacyDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp">

            <TextView
                android:id="@+id/tvPharmacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextView.Blue.Bold.12"
                android:text="@string/pharmacy_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivExpandPharmacy"
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/ic_arrow_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="@color/blue" />

            <LinearLayout
                android:id="@+id/llPharmacyInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_top_margin"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tvPharmacy">

                <TextView
                    android:id="@+id/tvPharmacyName"
                    style="@style/TextView.Grey.Regular.12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_txt" />
                <TextView
                    android:id="@+id/tvPharmacySpecialty"
                    style="@style/TextView.Grey.Regular.12"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specialty_txt" />

                <TextView
                    android:id="@+id/tvPharmacyAddress"
                    style="@style/TextView.Grey.Regular.12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_txt" />

                <TextView
                    android:id="@+id/tvPharmacyCity"
                    style="@style/TextView.Grey.Regular.12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city_txt" />

                <TextView
                    android:id="@+id/tvPharmacyState"
                    style="@style/TextView.Grey.Regular.12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state_txt" />

                <TextView
                    android:id="@+id/tvZipCode"
                    style="@style/TextView.Grey.Regular.12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zipcode_txt" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>