<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_12sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.doctor.eprescription.customviews.FormEditText
        android:id="@+id/fetMedicines"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:formHint="@string/medicine"
        android:layout_marginEnd="@dimen/_12sdp"
        app:layout_constraintEnd_toStartOf="@id/btnAction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnAction"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/baseline_delete_24"
        android:padding="@dimen/_3sdp"
        android:background="@drawable/rectangle_round_blue"
        app:layout_constraintTop_toTopOf="@id/fetMedicines"
        app:layout_constraintBottom_toBottomOf="@id/fetMedicines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fetMedicines"
        app:tint="@color/white" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llQuantity"
        app:layout_constraintTop_toBottomOf="@id/fetMedicines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_top_margin"
        android:orientation="horizontal">

        <com.doctor.eprescription.customviews.FormEditText
            android:id="@+id/fetQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            app:formHint="@string/quantity" />

        <Space
            android:layout_width="@dimen/_10sdp"
            android:layout_height="0dp"/>

        <com.doctor.eprescription.customviews.FormEditText
            android:id="@+id/fetQuantityUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            app:formHint="@string/quantity_unit"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>