<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/mainLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/doneButton"
            style="@style/BoldFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/done_txt"
            android:textAllCaps="true"
            android:textColor="@color/colorWaterBlue"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/backer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backer" />

        <TextView
            android:id="@+id/cantFindDoctorTitle"
            style="@style/BoldFontStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:ellipsize="marquee"
            android:gravity="end"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/cant_find_a_doctor"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_8ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/backer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backer"
            app:layout_constraintTop_toTopOf="@+id/backer" />

        <include
            android:id="@+id/backer"
            layout="@layout/comp_back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_heading"
        style="@style/BoldFontStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_19sdp"
        android:layout_marginEnd="@dimen/_19sdp"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backLayout"
        tools:text="Title" />

<!--    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ "-->
    <EditText
        android:id="@+id/et_search"
        style="@style/RegularFontStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/search_grey_bg"
        android:drawableStart="@drawable/search"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/search_txt"
        android:inputType="textCapWords"
        android:imeOptions="actionSearch"
        android:padding="@dimen/_15sdp"
        android:singleLine="true"
        android:textColorHint="@color/colorGrayText8080"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCommonInfoList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search"
        tools:listitem="@layout/item_select" />

    <include
        android:id="@+id/noDataLayout"
        layout="@layout/no_data_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:visibility="gone"
        tools:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_search" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondaryMainLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorTransparent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_search">


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>